--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Timer</title>
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+      }
+      .timer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-top: 150px;
+      }
+      .field {
+        margin: 0px 20px;
+      }
+      .value {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 48px;
+      }
+    </style>
   </head>
   <body>
     <div class="timer" id="timer-1">
